--- a/src/styles/margin.css
+++ b/src/styles/margin.css
@@ -1,417 +1,426 @@
 .m0 {
-    margin: 0;
+  margin: 0;
 }
 .mr0 {
-    margin-right: 0;
+  margin-right: 0;
 }
 .mr1 {
-    margin-right: 1px;
+  margin-right: 1px;
 }
 .mr2 {
-    margin-right: 2px;
+  margin-right: 2px;
 }
 .mr3 {
-    margin-right: 3px;
+  margin-right: 3px;
 }
 .mr4 {
-    margin-right: 4px;
+  margin-right: 4px;
 }
 .mr5 {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 .mr6 {
-    margin-right: 6px;
+  margin-right: 6px;
 }
 .mr7 {
-    margin-right: 7px;
+  margin-right: 7px;
 }
 .mr8 {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 .mr9 {
-    margin-right: 9px;
+  margin-right: 9px;
 }
 .mr10 {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .mr11 {
-    margin-right: 11px;
+  margin-right: 11px;
 }
 .mr12 {
-    margin-right: 12px;
+  margin-right: 12px;
 }
 .mr13 {
-    margin-right: 13px;
+  margin-right: 13px;
 }
 .mr14 {
-    margin-right: 14px;
+  margin-right: 14px;
 }
 .mr15 {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 .mr16 {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 .mr17 {
-    margin-right: 17px;
+  margin-right: 17px;
 }
 .mr18 {
-    margin-right: 18px;
+  margin-right: 18px;
 }
 .mr19 {
-    margin-right: 19px;
+  margin-right: 19px;
 }
 .mr20 {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 .mr21 {
-    margin-right: 21px;
+  margin-right: 21px;
 }
 .mr22 {
-    margin-right: 22px;
+  margin-right: 22px;
 }
 .mr23 {
-    margin-right: 23px;
+  margin-right: 23px;
 }
 .mr24 {
-    margin-right: 24px;
+  margin-right: 24px;
 }
 .mr25 {
-    margin-right: 25px;
+  margin-right: 25px;
 }
 .mr5p {
-    margin-right: 5%;
+  margin-right: 5%;
 }
 
 .ml0 {
-    margin-left: 0;
+  margin-left: 0;
 }
 .ml1 {
-    margin-left: 1px;
+  margin-left: 1px;
 }
 .ml2 {
-    margin-left: 2px;
+  margin-left: 2px;
 }
 .ml3 {
-    margin-left: 3px;
+  margin-left: 3px;
 }
 .ml4 {
-    margin-left: 4px;
+  margin-left: 4px;
 }
 .ml5 {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 .ml6 {
-    margin-left: 6px;
+  margin-left: 6px;
 }
 .ml7 {
-    margin-left: 7px;
+  margin-left: 7px;
 }
 .ml8 {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 .ml9 {
-    margin-left: 9px;
+  margin-left: 9px;
 }
 .ml10 {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 .ml11 {
-    margin-left: 11px;
+  margin-left: 11px;
 }
 .ml12 {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 .ml13 {
-    margin-left: 13px;
+  margin-left: 13px;
 }
 .ml14 {
-    margin-left: 14px;
+  margin-left: 14px;
 }
 .ml15 {
-    margin-left: 15px;
+  margin-left: 15px;
+}
+.ml20 {
+  margin-left: 20px;
+}
+.ml25 {
+  margin-left: 25px;
+}
+.ml30 {
+  margin-left: 30px;
 }
 .ml1p {
-    margin-left: 1%;
+  margin-left: 1%;
 }
 .ml2p {
-    margin-left: 2%;
+  margin-left: 2%;
 }
 .ml3p {
-    margin-left: 3%;
+  margin-left: 3%;
 }
 .ml4p {
-    margin-left: 4%;
+  margin-left: 4%;
 }
 .ml5p {
-    margin-left: 5%;
+  margin-left: 5%;
 }
 .ml6p {
-    margin-left: 6%;
+  margin-left: 6%;
 }
 .ml7p {
-    margin-left: 7%;
+  margin-left: 7%;
 }
 .ml8p {
-    margin-left: 8%;
+  margin-left: 8%;
 }
 .ml9p {
-    margin-left: 9%;
+  margin-left: 9%;
 }
 .ml10p {
-    margin-left: 10%;
+  margin-left: 10%;
 }
 .mt-40 {
-    margin-top: -40px;
+  margin-top: -40px;
 }
 .mt-35 {
-    margin-top: -35px;
+  margin-top: -35px;
 }
 .mt-30 {
-    margin-top: -30px;
+  margin-top: -30px;
 }
 .mt-25 {
-    margin-top: -25px;
+  margin-top: -25px;
 }
 .mt-20 {
-    margin-top: -20px;
+  margin-top: -20px;
 }
 .mt-19 {
-    margin-top: -19px;
+  margin-top: -19px;
 }
 .mt-18 {
-    margin-top: -18px;
+  margin-top: -18px;
 }
 .mt-17 {
-    margin-top: -17px;
+  margin-top: -17px;
 }
 .mt-16 {
-    margin-top: -16px;
+  margin-top: -16px;
 }
 .mt-15 {
-    margin-top: -15px;
+  margin-top: -15px;
 }
 .mt-14 {
-    margin-top: -14px;
+  margin-top: -14px;
 }
 .mt-13 {
-    margin-top: -13px;
+  margin-top: -13px;
 }
 .mt-12 {
-    margin-top: -12px;
+  margin-top: -12px;
 }
 .mt-11 {
-    margin-top: -11px;
+  margin-top: -11px;
 }
 .mt-10 {
-    margin-top: -10px;
+  margin-top: -10px;
 }
 .mt-9 {
-    margin-top: -9px;
+  margin-top: -9px;
 }
 .mt-8 {
-    margin-top: -8px;
+  margin-top: -8px;
 }
 .mt-7 {
-    margin-top: -7px;
+  margin-top: -7px;
 }
 .mt-6 {
-    margin-top: -6px;
+  margin-top: -6px;
 }
 .mt-5 {
-    margin-top: -5px;
+  margin-top: -5px;
 }
 .mt-4 {
-    margin-top: -4px;
+  margin-top: -4px;
 }
 .mt-3 {
-    margin-top: -3px;
+  margin-top: -3px;
 }
 .mt-2 {
-    margin-top: -2px;
+  margin-top: -2px;
 }
 .mt-1 {
-    margin-top: -1px;
+  margin-top: -1px;
 }
 .mt1 {
-    margin-top: 1px;
+  margin-top: 1px;
 }
 .mt2 {
-    margin-top: 2px;
+  margin-top: 2px;
 }
 .mt3 {
-    margin-top: 3px;
+  margin-top: 3px;
 }
 .mt4 {
-    margin-top: 4px;
+  margin-top: 4px;
 }
 .mt5 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 .mt6 {
-    margin-top: 6px;
+  margin-top: 6px;
 }
 .mt7 {
-    margin-top: 7px;
+  margin-top: 7px;
 }
 .mt8 {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 .mt9 {
-    margin-top: 9px;
+  margin-top: 9px;
 }
 .mt10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 .mt11 {
-    margin-top: 11px;
+  margin-top: 11px;
 }
 .mt12 {
-    margin-top: 12px;
+  margin-top: 12px;
 }
 .mt13 {
-    margin-top: 13px;
+  margin-top: 13px;
 }
 .mt14 {
-    margin-top: 14px;
+  margin-top: 14px;
 }
 .mt15 {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 .mt16 {
-    margin-top: 16px;
+  margin-top: 16px;
 }
 .mt17 {
-    margin-top: 17px;
+  margin-top: 17px;
 }
 .mt18 {
-    margin-top: 18px;
+  margin-top: 18px;
 }
 .mt19 {
-    margin-top: 19px;
+  margin-top: 19px;
 }
 .mt20 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 .mt21 {
-    margin-top: 21px;
+  margin-top: 21px;
 }
 .mt22 {
-    margin-top: 22px;
+  margin-top: 22px;
 }
 .mt23 {
-    margin-top: 23px;
+  margin-top: 23px;
 }
 .mt24 {
-    margin-top: 24px;
+  margin-top: 24px;
 }
 .mt25 {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 .mt30 {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 .mt1p {
-    margin-top: 1%;
+  margin-top: 1%;
 }
 .mt2p {
-    margin-top: 2%;
+  margin-top: 2%;
 }
 .mt3p {
-    margin-top: 3%;
+  margin-top: 3%;
 }
 .mt4p {
-    margin-top: 4%;
+  margin-top: 4%;
 }
 .mt5p {
-    margin-top: 5%;
+  margin-top: 5%;
 }
 .mt6p {
-    margin-top: 6%;
+  margin-top: 6%;
 }
 .mt7p {
-    margin-top: 7%;
+  margin-top: 7%;
 }
 .mt8p {
-    margin-top: 8%;
+  margin-top: 8%;
 }
 .mt9p {
-    margin-top: 9%;
+  margin-top: 9%;
 }
 .mt10p {
-    margin-top: 10%;
+  margin-top: 10%;
 }
 .mt11p {
-    margin-top: 11%;
+  margin-top: 11%;
 }
 .mt12p {
-    margin-top: 12%;
+  margin-top: 12%;
 }
 .mt13p {
-    margin-top: 13%;
+  margin-top: 13%;
 }
 .mt14p {
-    margin-top: 14%;
+  margin-top: 14%;
 }
 .mt15p {
-    margin-top: 15%;
+  margin-top: 15%;
 }
 
 .mb-15 {
-    margin-bottom: -15px;
+  margin-bottom: -15px;
 }
 .mb-10 {
-    margin-bottom: -10px;
+  margin-bottom: -10px;
 }
 .mb-9 {
-    margin-bottom: -9px;
+  margin-bottom: -9px;
 }
 .mb-8 {
-    margin-bottom: -8px;
+  margin-bottom: -8px;
 }
 .mb-7 {
-    margin-bottom: -7px;
+  margin-bottom: -7px;
 }
 .mb-6 {
-    margin-bottom: -6px;
+  margin-bottom: -6px;
 }
 .mb-5 {
-    margin-bottom: -5px;
+  margin-bottom: -5px;
 }
 .mb-4 {
-    margin-bottom: -4px;
+  margin-bottom: -4px;
 }
 .mb-3 {
-    margin-bottom: -3px;
+  margin-bottom: -3px;
 }
 .mb-2 {
-    margin-bottom: -2px;
+  margin-bottom: -2px;
 }
 .mb-1 {
-    margin-bottom: -1px;
+  margin-bottom: -1px;
 }
 .mb1 {
-    margin-bottom: 1px;
+  margin-bottom: 1px;
 }
 .mb2 {
-    margin-bottom: 2px;
+  margin-bottom: 2px;
 }
 .mb3 {
-    margin-bottom: 3px;
+  margin-bottom: 3px;
 }
 
 .mb1p {
-    margin-bottom: 1%;
+  margin-bottom: 1%;
 }
 .mb2p {
-    margin-bottom: 2%;
+  margin-bottom: 2%;
 }
 .mb3p {
-    margin-bottom: 3%;
+  margin-bottom: 3%;
 }
 .mb4p {
-    margin-bottom: 4%;
+  margin-bottom: 4%;
 }
 .mb5p {
-    margin-bottom: 5%;
+  margin-bottom: 5%;
 }
