--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -1,91 +1,91 @@
 body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-input,
+input[type="text"],
 textarea,
 button,
 select,
 div,
 span,
 a {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 button,
-input[type='submit'],
-input[type='reset'] {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
+input[type="submit"],
+input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 
-input {
-    appearance: none;
-    outline: none;
+input[type="text"] {
+  appearance: none;
+  outline: none;
 }
 select {
-    outline: none;
-    appearance: none;
-    -webkit-appearance: none;
+  outline: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .aic {
-    align-items: center;
+  align-items: center;
 }
 
 .tac {
-    text-align: center;
+  text-align: center;
 }
 .posa {
-    position: absolute;
+  position: absolute;
 }
 .dn {
-    display: none;
+  display: none;
 }
 .posr {
-    position: relative;
+  position: relative;
 }
 .zi10 {
-    z-index: 10;
+  z-index: 10;
 }
 .zi9 {
-    z-index: 9;
+  z-index: 9;
 }
 .zi8 {
-    z-index: 8;
+  z-index: 8;
 }
 .zi7 {
-    z-index: 7;
+  z-index: 7;
 }
 .zi6 {
-    z-index: 6;
+  z-index: 6;
 }
 .zi5 {
-    z-index: 5;
+  z-index: 5;
 }
 .zi4 {
-    z-index: 4;
+  z-index: 4;
 }
 .zi3 {
-    z-index: 3;
+  z-index: 3;
 }
 .zi2 {
-    z-index: 2;
+  z-index: 2;
 }
 .zi1 {
-    z-index: 1;
+  z-index: 1;
 }
