add some styling

--- a/src/styles/border.css
+++ b/src/styles/border.css
@@ -17,6 +17,9 @@
   border-right: solid 1px #e5e5e5;
 }
 
+.bl-s1-grey {
+  border-left: solid 1px #e5e5e5;
+}
 .bb-s1-purple {
   border-bottom: solid 3px #4a67e2;
 }
